--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
+    <string moduleConfig="true" name="reactNativeCodePush_androidDeploymentKey">p23blorgn_DMkCxfxy4_SZjF7gLhVkRF2K1oG</string>
     <string name="app_name">Milkcrate</string>
 </resources>
